# process

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/run_ls/: main.cpp
example/send_input/: main.cpp
include/process/: process.hpp
include/process/impl/: output_file.hpp
test/: CMakeLists.txt  main.cpp  test_input_file.cpp  test_output.cpp  test_output_file.cpp  test_pipe.cpp  test_run.cpp  test_util.cpp  test_version.cpp
